# ProgettoPCS_23

./: .gitignore  ProgettoPCS_Spiegazione.docx
Projects/Raffinamento/: CMakeLists.txt  main_P.cpp  main_T.cpp  main_program.cpp  main_programma.cpp  main_test.cpp
Projects/Raffinamento/src/: CMakeLists.txt  classe_raffinamento.cpp  classe_raffinamento.hpp  ordinamento.hpp
Projects/Raffinamento/test/: CMakeLists.txt  test_raffinamento.hpp  teste_raffinamento.hpp
